# cobra

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md
crates/drift-cli/: Cargo.toml
crates/drift-cli/src/: main.rs  play.rs
crates/drift-client/: Cargo.toml
crates/drift-client/src/: app.rs  main.rs  net.rs
crates/drift-combat/: Cargo.toml
crates/drift-combat/src/: combatant.rs  encounter.rs  lib.rs  math.rs
crates/drift-core/: Cargo.toml
crates/drift-core/src/: hook.rs  ids.rs  lib.rs  money.rs  rng.rs  step.rs  time.rs
crates/drift-data/: Cargo.toml
crates/drift-data/src/: commodity.rs  lib.rs  production.rs  scenario.rs  ship.rs  system.rs
crates/drift-economy/: Cargo.toml
crates/drift-economy/src/: command.rs  event.rs  lib.rs  market.rs  patrol.rs  pricing.rs  production.rs  trader.rs  world.rs
crates/drift-economy/tests/: integration.rs
crates/drift-mods/: Cargo.toml
crates/drift-mods/src/: error.rs  lib.rs  loader.rs  manifest.rs  registry.rs
crates/drift-mods/tests/: loader.rs
crates/drift-proto/: Cargo.toml
crates/drift-proto/src/: lib.rs
crates/drift-server/: Cargo.toml
crates/drift-server/src/: lib.rs  main.rs  server.rs
crates/drift-server/tests/: round_trip.rs
crates/drift-sim/: Cargo.toml
crates/drift-sim/src/: lib.rs
docs/dev/: architecture.md  multiplayer.md  roadmap.md
mods/core/: manifest.toml
mods/core/commodities/: commodities.ron
mods/core/production/: recipes.ron
mods/core/ships/: ships.ron
mods/core/systems/: systems.ron
scenarios/: equilibrium.ron  frontier.ron
