[package]
name = "drift-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
drift-core = { workspace = true }
drift-economy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
drift-data = { workspace = true }
drift-mods = { workspace = true }
drift-sim = { workspace = true }
