[package]
name = "drift-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "drift_server"
path = "src/lib.rs"

[[bin]]
name = "drift-server"
path = "src/main.rs"

[dependencies]
drift-economy = { workspace = true }
drift-sim = { workspace = true }
drift-proto = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
drift-data = { workspace = true }
